# maslibpy

./: README.md  example.py  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
maslib/agent/: agent.py  agent_prompt.py  baseagent.py
maslib/crew/: crew.py
maslib/llm/: constants.py  llm.py
maslib/messages/: assistant.py  base.py  system.py  user.py
maslibpy/: pyproject.toml
maslibpy/agent/: agent.py  baseagent.py
maslibpy/llm/: llm.py
maslibpy/prompts/: README.md
maslibpy/prompts/cot/: cot_prompts.py
maslibpy/reasoning/: README.md  mathematical.py  prompt_based.py
pymas/agent/: agent.py
pymas/crew/: crew.py
pymas/llm/: llm.py
