[tool.poetry]
name = "maslib"
version = "0.1.0"
description = "Library for agents"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litellm = "^1.57.2"
pydantic = "^2.10.4"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
