[tool.poetry]
name = "maslib"
version = "0.1.0"
description = "Multi Agent Framework"
authors = ["Haripreeth Avarur, BayesLabs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.4"
litellm = "^1.57.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
